# cookiecutter-templates

./: .devcontainer.json
rust/: cookiecutter.json
rust/{{ cookiecutter.slug }}/: .editorconfig  Cargo.toml  devbox.json
